deploy/asciinema/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asciinema-server
  labels:
    app: asciinema-server
  namespace: go-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asciinema-server
  template:
    metadata:
      labels:
        app: asciinema-server
    spec:
      containers:
      - name: asciinema-server
        image: ghcr.io/asciinema/asciinema-server:20251114
        ports:
        - containerPort: 4000
          name: web
        - containerPort: 4002
          name: admin
        volumeMounts:
          - name: asciinema-data
            mountPath: /var/lib/asciinema
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      - name: postgres
        image: postgres:15
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        livenessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - postgres
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data
      - name: asciinema-data
        persistentVolumeClaim:
          claimName: asciinema-data
